<resources>
    <string name="app_name">Bus Booking App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map view</string>
    <string name="listTrips">List Trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trips">Trips</string>
    <string name="tripName">AA-00</string>
    <string name="tripTime">0:00 AM</string>
    <string name="book">Book</string>
    <string name="tripIsFull">The trip you selected is full.</string>
    <string name="selectAnotherTrip">Please select another one.</string>
    <string name="selectATrip">Select a Trip</string>
    <string name="tripCount">0 Trips</string>
</resources>