<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_16">

            <TextView
                android:id="@+id/tvTrip"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                tools:text="@string/tripName" />

            <TextView
                android:id="@+id/tvTripTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                tools:text="@string/tripTime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book"
                app:backgroundTint="?attr/colorPrimary" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@color/gray" />

    </LinearLayout>
</layout>
